syntax = "proto3";

package stroeer.pages.section.v1;

import "stroeer/core/v1/article.proto";

option go_package = "github.com/stroeer/tapir/go/stroeer/pages/section/v1;section";
option java_multiple_files = true;
option java_package = "de.stroeer.pages.section.v1";

service SectionService {
  rpc GetSectionPage (GetSectionPageRequest) returns (GetSectionPageResponse) {}
}

message GetSectionPageRequest {
  string section_path = 1;
}

message GetSectionPageResponse {
  repeated stroeer.core.v1.Article articles = 1;
}

